# video_processing

./: .gitignore  1.py  config.toml  docker-compose.yml  docker-rerank.yml  docker.yml  embeddings.py  get_video.py  main.py  output.csv  pyproject.toml  summary.py  test.py
embedding_service/: Dockerfile  app.py
ocr_service/: Dockerfile  main.py
prompts/: main.prompt  ocr.prompt  prepare_desc.prompt  rerank.prompt
