[project]
name = "vllm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "moviepy>=2.2.1",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
]
